fix tags on ios

--- a/www-develop/css/style.css
+++ b/www-develop/css/style.css
@@ -1903,7 +1903,7 @@ h1 {
 }
 
 input, textarea {
-    -webkit-appearance: none;
+    -webkit-appearance: none !important;
 }
 
 
